Auth Scaffold * bakes in /auth/login * establishes a baseline withAuth HoF to use for routes * fixes redisService interaction
