# api/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
-  version: "0.0.1"
-  title: Hello World App!
+  version: "1.0.0"
+  title: ADS WebApp Baseline
 # during dev, should point to your local machine
 host: localhost:64003
 # basePath prefixes all resource paths 
@@ -18,6 +18,75 @@ consumes:
 produces:
   - application/json
 paths:
+  /auth/login:
+    x-swagger-router-controller: auth
+    post:
+      description: Issues a valid JWT for an external system to have access to the backend API
+      operationId: login
+      parameters:
+      - name: body
+        in: body
+        description: The credentials of the user attempting to login
+        required: true
+        schema:
+          $ref: "#/definitions/Login"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/LoginResult"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /user/profile:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: user
+    get:
+      description: Returns the consolidated profile of a given user
+      # used as the method name of the controller
+      operationId: profile
+      parameters:
+      - name: Authorization
+        in: header
+        description: A valid JWT for a logged in user
+        required: true
+        type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/UserProfile"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /user/permissions:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: user
+    get:
+      description: Returns the consolidated profile of a given user
+      # used as the method name of the controller
+      operationId: permissions
+      parameters:
+      - name: Authorization
+        in: header
+        description: A valid JWT for a logged in user
+        required: true
+        type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/UserPermissions"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -52,6 +121,36 @@ definitions:
     properties:
       message:
         type: string
+  Login:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+  LoginResult:
+    properties:
+      access_token:
+        type: string
+      token_type:
+        type: string
+      refresh_token:
+        type: string
+  UserProfile:
+    properties:
+      first_name:
+        type: string
+      last_name:
+        type: string
+  UserPermission:
+    properties:
+      code:
+        type: string
+      label:
+        type: string
+  UserPermissions:
+    type: array
+    items:
+      $ref: "#/definitions/UserPermission"
   ErrorResponse:
     required:
       - message
